--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finance-tracker",
+  "name": "fintr",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
